--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -33,6 +33,7 @@ main {
     animation-name: start-page;
     animation-duration: 3s;
     animation-iteration-count: 1;
+    animation-fill-mode: forwards;
     animation-delay: 2s;
 }
 
