--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,9 +41,10 @@ h1, h3, h5, h6, button, .montserrat {
     font-family: 'Montserrat', sans-serif;
 }
 
-.w-512px {
+.header-form {
     width: 512px;
 }
+
 
 .red-section {
     background-color: #ef4444;
@@ -51,7 +52,7 @@ h1, h3, h5, h6, button, .montserrat {
 }
 
 .section-inner {
-    width: calc(100% - 4rem);
+    width: calc(100% - 8rem);
     max-width: 1600px;
     padding: 8rem 0;
 }
@@ -104,6 +105,15 @@ h1, h3, h5, h6, button, .montserrat {
     border-color: transparent transparent #ffffff transparent;
 }
 
+.header-logo {
+    width: 300px;
+}
+
+.down-arrow {
+    width: 3rem;
+    height: 3rem;
+}
+
 .header-form-wrapper {
     background-position: center;
     background-size: cover;
@@ -133,5 +143,49 @@ h1, h3, h5, h6, button, .montserrat {
     }
     100% {
         background-image: url(../images/lab.jpg);
+    }
+}
+
+@media only screen and (max-width: 1680px) {
+    .section-inner {
+        max-width: 1400px;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .section-inner {
+        max-width: 1200px;
+        padding: 6rem 0;
+    }
+
+    .padding-bottom-0 {
+        padding-bottom: 0;
+    }
+
+    .header-form {
+        width: 400px;
+    }
+
+    .header-title.header-title {
+        font-size: 5rem;
+    }
+
+    .header-logo {
+        width: 250px;
+    }
+}
+
+@media only screen and (max-width: 1280px) {
+    .header-form {
+        width: 360px;
+    }
+
+    .header-logo {
+        width: 200px;
+    }
+
+    .down-arrow {
+        width: 2rem;
+        height: 2rem;
     }
 }
