--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,8 @@
 
 * {
     font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
