Update arial font to arial black

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,8 +27,7 @@ main {
 }
 
 h1, h3, h5, h6, button, .montserrat {
-    font-family: 'Arial', sans-serif;
-	font-weight: 700 !important;
+    font-family: 'Arial Black', sans-serif;
 }
 
 .header {
